<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/feedback_background_color"
    android:orientation="vertical" >

    <include layout="@layout/feedback_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5.0dp" >

        <EditText
            android:id="@+id/feedback_content_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="8"
            android:background="@drawable/feedback_text_edit_selector"
            android:gravity="top"
            android:hint="@string/feedback_content_hint"
            android:paddingBottom="14.0dp"
            android:paddingLeft="12.0dp"
            android:paddingTop="12.0dp"
            android:singleLine="false"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/feedback_contact_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/feedback_text_edit_selector"
            android:gravity="center_vertical"
            android:hint="@string/feedback_contact_hint"
            android:paddingLeft="12.0dp"
            android:paddingRight="12.0dp"
            android:singleLine="true"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/feedback_submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dp"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/feedback_submit_button_selector"
            android:padding="10.0dp"
            android:text="@string/feedback_submit"
            android:textColor="@color/feedback_white"
            android:textSize="18.0sp" />
    </LinearLayout>

</LinearLayout>
