<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/about_background_color"
    tools:ignore="ContentDescription" >
    
    <include layout="@layout/about_title" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="5dp"
        android:background="@drawable/about_border" >

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#FF0F00F0"
            android:textSize="20sp" />
                
        <ImageView
            android:id="@+id/about_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/about_app_name"
            android:layout_centerHorizontal="true"
            android:src="@drawable/about_gnss_assist" />
        
        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_name"
            android:layout_centerHorizontal="true"
            android:textColor="#FF000000"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/about_terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/layout_spacing"
            android:background="@drawable/about_terms_of_service_selector"
            android:textColor="#FF000000"
            android:textSize="20sp"
           	android:text="@string/about_terms_of_service" />
            
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="#FF000000"
            android:text="@string/about_copyright"
            android:autoLink="web" />
        
    </RelativeLayout>
</LinearLayout>
